--- a/06_databases/99_hw/redditclone/internal/docker-compose.yml
+++ b/06_databases/99_hw/redditclone/internal/docker-compose.yml
@@ -15,15 +15,15 @@ services:
     volumes:
       - './sql/:/docker-entrypoint-initdb.d/'
 
+  mongodb:
+    image: 'mongo:5'
+    environment:
+      - MONGO_INITDB_DATABASE=golanghw
+    ports:
+      - '27017-27019:27017-27019'
+
   # redis:
   #   image: 'redis'
   #   ports:
   #     - '6379:6379'
-
-  # mongodb:
-  #   image: 'mongo:5'
-  #   environment:
-  #     - MONGO_INITDB_DATABASE=coursera
-  #   ports:
-  #     - '27017-27019:27017-27019'
 
