sessions in redis now, comments left

--- a/06_databases/99_hw/redditclone/internal/docker-compose.yml
+++ b/06_databases/99_hw/redditclone/internal/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     ports:
       - '27017-27019:27017-27019'
 
-  # redis:
-  #   image: 'redis'
-  #   ports:
-  #     - '6379:6379'
+  redis:
+    image: 'redis'
+    ports:
+      - '6379:6379'
 
