--- a/09_conf_monitoring/0_services/docker-compose.yml
+++ b/09_conf_monitoring/0_services/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - "6831:6831/udp"
       - "16686:16686"
   grafana:
-    image: grafana/grafana:7.3.0
+    image: grafana/grafana
     links:
       - prometheus:prometheus # datasource = http://prometheus:9090
       - statsd:statsd # datasource = http://statsd:81
